force-app/main/default/objects/KeywordConfig__mdt/KeywordConfig__mdt.object-meta.xml
<CustomObject>
    <label>KeywordConfig</label>
    <pluralLabel>KeywordConfigs</pluralLabel>
</CustomObject>