force-app/main/default/objects/KeywordConfig__mdt/fields/Routing_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Routing_Queue_Name__c</fullName>
    <label>Routing Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>