force-app/main/default/objects/KeywordConfig__mdt/fields/Support_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Support_Email_Address__c</fullName>
    <label>Support Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>